package java_design_patterns.Q_command.remote_control;

public class LightOnCommand implements Command {

    Light light;

    // The constructor is passed the light it is going to control.
    public LightOnCommand(Light light)
    {
        this.light = light;
    }
    public void execute()
    {
        light.on();
    }

}
